--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-use-measure": "^2.1.7",
     "tailwind-merge": "^3.3.1",
     "three": "^0.180.0",
     "zustand": "^5.0.8"
