--- a/components.json
+++ b/components.json
@@ -20,6 +20,8 @@
   },
   "registries": {
     "@aceternity": "https://ui.aceternity.com/registry/{name}.json",
-    "@tailark": "https://tailark.com/r/{name}.json"
+    "@tailark": "https://tailark.com/r/{name}.json",
+    "@skiper-ui": "https://skiper-ui.com/registry/{name}.json",
+    "@magicui": "https://magicui.design/r/{name}.json"
   }
 }
