--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
+    "install": "^0.13.0",
     "lenis": "^1.3.11",
     "lucide-react": "^0.546.0",
     "motion": "^12.23.24",
     "next": "15.5.6",
+    "npm": "^11.6.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-use-measure": "^2.1.7",
