--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
+    "@studio-freight/react-lenis": "^0.0.47",
     "@tabler/icons-react": "^3.35.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "install": "^0.13.0",
-    "lenis": "^1.3.11",
+    "lenis": "^1.3.13",
     "lucide-react": "^0.546.0",
     "motion": "^12.23.24",
     "next": "15.5.6",
